<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_time_button">Add Time</string>
    <string name="crime_photo">Photo</string>
    <string name="close_photo">close</string>


    <!-- item -->
    <string name="date_format">EEEE , MMM dd, yyyy</string>
    <string name="item_title">Crime title</string>
    <string name="item_date">Crime date</string>
    <string name="item_police_button">Requires Police</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect">Call to suspect</string>

    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
</resources>