<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topLine"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/normal_space"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startLine"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/normal_space"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endLine"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/normal_space"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomLine"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/normal_space"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine"
        app:layout_constraintTop_toBottomOf="@id/topLine"/>

    <EditText
        android:id="@+id/crimeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/detailsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine"
        app:layout_constraintTop_toBottomOf="@id/crimeTitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crimeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine"
        app:layout_constraintTop_toBottomOf="@id/detailsTextView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crimeTimeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_time_button"
        app:layout_constraintTop_toBottomOf="@id/crimeDate"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/crime_solved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine"
        app:layout_constraintTop_toBottomOf="@id/crimeTimeButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>