<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topLine"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/normal_space"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startLine"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/normal_space"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endLine"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/normal_space"/>


    <TextView
        android:id="@+id/crimeTitle"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_title"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintTop_toBottomOf="@id/topLine"
        app:layout_constraintEnd_toStartOf="@id/imageView"/>

    <TextView
        android:id="@+id/crimeDate"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_date"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/crimeTitle"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_solved"
        app:layout_constraintEnd_toStartOf="@id/endLine"
        app:layout_constraintTop_toBottomOf="@id/topLine"
        app:layout_constraintBottom_toTopOf="@id/policeButton"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/policeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_police_button"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintTop_toBottomOf="@id/crimeDate"
        app:layout_constraintEnd_toStartOf="@id/imageView"/>


</androidx.constraintlayout.widget.ConstraintLayout>